<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.RegisterFragment">



    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/prompt_sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/fredoka_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <TextView
            android:id="@+id/prompt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/orange_grey" />

        <TextView
            android:id="@+id/linkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/action_log_in"
            android:textColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/prompt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/fredoka_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toTopOf="@id/username"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/space_between_edittext"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/prompt_username"
        android:textColorHint="@color/transparent"
        android:fontFamily="@font/fredoka_one"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_username"
        android:autofillHints="" />

    <TextView
        android:id="@+id/prompt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/toNextPrompt"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/fredoka_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toTopOf="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/space_between_edittext"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bg"
        android:imeActionLabel="@string/action_log_in"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/transparent"
        android:fontFamily="@font/fredoka_one"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_password"
        android:autofillHints="" />

    <TextView
        android:id="@+id/prompt_re_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/toNextPrompt"
        android:text="@string/re_enter_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/fredoka_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/re_enter_password"/>

    <EditText
        android:id="@+id/re_enter_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/space_between_edittext"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bg"
        android:imeActionLabel="@string/action_log_in"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/transparent"
        android:fontFamily="@font/fredoka_one"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_re_enter_password"
        android:autofillHints="" />

    <TextView
        android:id="@+id/prompt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/toNextPrompt"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/fredoka_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/re_enter_password"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/space_between_edittext"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_bg"
        android:imeActionLabel="@string/action_log_in"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/transparent"
        android:fontFamily="@font/fredoka_one"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_email"
        android:autofillHints="" />

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_bg"
        android:text="@string/action_register"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:fontFamily="@font/fredoka_one"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.3"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>